[package]
name = "rustenstein"
version = "0.1.0"
authors = ["Wilmer Finol"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.22.2"
image = "0.23.8"
sdl2 = "0.34.3"
futures = "0.3.5"
env_logger = "0.7"
#shaderc = "0.6"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.1"
glob = "0.3"
shaderc = "0.6"
